--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,58 @@
-tensorflow==1.14.0   # for python3.6 on centos7
-keras==2.1.5
-#spliceai==1.3.1
-spliceai @ git+https://github.com/bw2/SpliceAI
-flask
-flask-cors
-flask-talisman
-gunicorn
-intervaltree
-markdown2
-pandas
-pysam
-redis
-# pangolin dependencies:
-gffutils
-biopython
-pyfastx
+absl-py==1.4.0
+argcomplete==3.0.8
+argh==0.27.2
+astor==0.8.1
+async-timeout==4.0.2
+biopython==1.79
+cached-property==1.5.2
+certifi==2016.9.26
+click==8.0.4
+dataclasses==0.8
+Flask==2.0.3
+Flask-Cors==3.0.10
+flask-talisman==1.0.0
+gast==0.5.4
+gffutils==0.11.1
+google-pasta==0.2.0
+grpcio==1.48.2
+gunicorn==20.1.0
+h5py==3.1.0
+importlib-metadata==4.8.3
+intervaltree==3.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+Keras==2.1.5
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+Markdown==3.3.7
+markdown2==2.4.8
+MarkupSafe==2.0.1
+numpy==1.19.5
+packaging==21.3
+pandas==1.1.5
+pangolin @ git+https://github.com/tkzeng/Pangolin@5cf94b8db938c658391b4305cd7ce33297d44ff7
+protobuf==3.19.6
+pyfaidx==0.7.1
+pyfastx==1.1.0
+pyparsing==3.0.9
+pysam==0.21.0
+python-dateutil==2.8.2
+pytz==2023.3
 pyvcf>=0.6.8
-pangolin @ git+https://github.com/tkzeng/Pangolin
+# PyVCF @ file:///Users/runner/miniforge3/conda-bld/pyvcf_1602591431703/work
+PyYAML==6.0
+redis==4.3.6
+scipy==1.5.4
+simplejson==3.19.1
+six==1.16.0
+sortedcontainers==2.4.0
+spliceai @ git+https://github.com/bw2/SpliceAI@8034f183f77840f640a23dd0aebb31613ce31da5
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
+torch==1.10.2
+typing_extensions==4.1.1
+Werkzeug==2.0.3
+wrapt==1.15.0
+zipp==3.6.0
